[gd_scene load_steps=4 format=3 uid="uid://cpnfrm4urr642"]

[ext_resource type="Script" uid="uid://bgejg0pbyfexc" path="res://addons/libmaszyna/editor/user_settings_dock.gd" id="1_c24dg"]
[ext_resource type="Script" uid="uid://bc8likdrai4yp" path="res://addons/libmaszyna/editor/user_settings_check_button.gd" id="2_2cs74"]
[ext_resource type="Script" uid="uid://c3o4dhxm72pj1" path="res://addons/libmaszyna/editor/user_settings_dropdown.gd" id="3_hwkpe"]

[node name="Maszyna Settings" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_c24dg")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="GameDirSection" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/GameDirSection"]
layout_mode = 2
text = "Game Folder"

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/GameDirSection"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "/home/DoS/Stuff/MaSzyna"

[node name="Browse" type="Button" parent="VBoxContainer/GameDirSection"]
layout_mode = 2
text = "Browse"

[node name="DirectorySelectorDialog" type="FileDialog" parent="VBoxContainer/GameDirSection"]
unique_name_in_owner = true
title = "Open a Directory"
size = Vector2i(700, 500)
popup_window = true
ok_button_text = "Select Current Folder"
file_mode = 2
access = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="ClearCacheButton" type="Button" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Clear caches"

[node name="ReloadModelsButton" type="Button" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Reload models"

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="FXAAButton" type="CheckButton" parent="VBoxContainer/HBoxContainer3"]
layout_mode = 2
button_pressed = true
script = ExtResource("2_2cs74")
section = "render"
key = "fxaa_enabled"
default = true

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
text = "FXAA"

[node name="HBoxContainer5" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="SDFGI" type="CheckButton" parent="VBoxContainer/HBoxContainer5"]
layout_mode = 2
button_pressed = true
script = ExtResource("2_2cs74")
section = "render"
key = "sdfgi_enabled"
default = true

[node name="Label2" type="Label" parent="VBoxContainer/HBoxContainer5"]
layout_mode = 2
size_flags_horizontal = 3
text = "SDFGI"

[node name="HBoxContainer6" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="SSIL" type="CheckButton" parent="VBoxContainer/HBoxContainer6"]
layout_mode = 2
button_pressed = true
script = ExtResource("2_2cs74")
section = "render"
key = "ssil_enabled"
default = true

[node name="Label2" type="Label" parent="VBoxContainer/HBoxContainer6"]
layout_mode = 2
size_flags_horizontal = 3
text = "SSIL"

[node name="HBoxContainer7" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="SSAO" type="CheckButton" parent="VBoxContainer/HBoxContainer7"]
layout_mode = 2
button_pressed = true
script = ExtResource("2_2cs74")
section = "render"
key = "ssao_enabled"
default = true

[node name="Label2" type="Label" parent="VBoxContainer/HBoxContainer7"]
layout_mode = 2
size_flags_horizontal = 3
text = "SSAO"

[node name="HBoxContainer8" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="SSR" type="CheckButton" parent="VBoxContainer/HBoxContainer8"]
layout_mode = 2
button_pressed = true
script = ExtResource("2_2cs74")
section = "render"
key = "ssr_enabled"
default = true

[node name="Label2" type="Label" parent="VBoxContainer/HBoxContainer8"]
layout_mode = 2
size_flags_horizontal = 3
text = "SSR"

[node name="HBoxContainer4" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="VolumetricFog" type="CheckButton" parent="VBoxContainer/HBoxContainer4"]
layout_mode = 2
button_pressed = true
script = ExtResource("2_2cs74")
section = "render"
key = "volumetric_fog_enabled"
default = true

[node name="Label3" type="Label" parent="VBoxContainer/HBoxContainer4"]
layout_mode = 2
text = "Volumetric Fog
"

[node name="HBoxContainer9" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="E3DAlphaTransparency" type="CheckButton" parent="VBoxContainer/HBoxContainer9"]
layout_mode = 2
script = ExtResource("2_2cs74")
section = "e3d"
key = "use_alpha_transparency"

[node name="Label3" type="Label" parent="VBoxContainer/HBoxContainer9"]
layout_mode = 2
text = "E3D Alpha Transparency
"

[node name="HBoxContainer11" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="VSync" type="CheckButton" parent="VBoxContainer/HBoxContainer11"]
layout_mode = 2
button_pressed = true
script = ExtResource("2_2cs74")
section = "window"
key = "vsync_enabled"
default = true

[node name="Label3" type="Label" parent="VBoxContainer/HBoxContainer11"]
layout_mode = 2
text = "VSync"

[node name="HBoxContainer12" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="OptionButton" type="OptionButton" parent="VBoxContainer/HBoxContainer12"]
layout_mode = 2
selected = 2
item_count = 4
popup/item_0/text = "Disabled"
popup/item_0/id = 0
popup/item_1/text = "x2"
popup/item_1/id = 1
popup/item_2/text = "x4"
popup/item_2/id = 2
popup/item_3/text = "x8"
popup/item_3/id = 3
script = ExtResource("3_hwkpe")
section = "render"
key = "msaa_3d"

[node name="Label3" type="Label" parent="VBoxContainer/HBoxContainer12"]
layout_mode = 2
text = "MSAA level"

[node name="HBoxContainer10" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="OptionButton" type="OptionButton" parent="VBoxContainer/HBoxContainer10"]
layout_mode = 2
selected = 2
item_count = 6
popup/item_0/text = "Disabled"
popup/item_0/id = 0
popup/item_1/text = "x2"
popup/item_1/id = 1
popup/item_2/text = "x4"
popup/item_2/id = 2
popup/item_3/text = "x8"
popup/item_3/id = 3
popup/item_4/text = "x16"
popup/item_4/id = 4
popup/item_5/text = "Max"
popup/item_5/id = 5
script = ExtResource("3_hwkpe")
section = "render"
key = "anisotropic_filtering_level"

[node name="Label3" type="Label" parent="VBoxContainer/HBoxContainer10"]
layout_mode = 2
text = "Anisotropic filtering level"

[node name="InfoMessageWindow" type="Window" parent="."]
unique_name_in_owner = true
initial_position = 4
size = Vector2i(300, 100)
visible = false
unresizable = true

[node name="FlowContainer" type="FlowContainer" parent="InfoMessageWindow"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -160.0
offset_top = -11.5
offset_right = 160.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="InfoMessageWindow/FlowContainer"]
layout_mode = 2
size_flags_horizontal = 3
horizontal_alignment = 1

[connection signal="visibility_changed" from="." to="." method="_refresh"]
[connection signal="text_changed" from="VBoxContainer/GameDirSection/LineEdit" to="." method="_on_line_edit_text_changed"]
[connection signal="button_up" from="VBoxContainer/GameDirSection/Browse" to="." method="_on_browse_button_up"]
[connection signal="dir_selected" from="VBoxContainer/GameDirSection/DirectorySelectorDialog" to="." method="_on_directory_selector_dialog_dir_selected"]
[connection signal="button_up" from="VBoxContainer/HBoxContainer2/ClearCacheButton" to="." method="_on_clear_cache_button_button_up"]
[connection signal="button_up" from="VBoxContainer/HBoxContainer2/ReloadModelsButton" to="." method="_on_reload_models_button_button_up"]
